# purescript-lsp

./: .gitignore
rust-purescript-language-server/: Cargo.toml  README.md
rust-purescript-language-server/src/: build.rs  code_actions.rs  config.rs  diagnostics.rs  formatting.rs  main.rs  ragu.rs  server.rs  types.rs
rust-purescript-language-server/src/commands/: build.rs  mod.rs
rust-purescript-language-server/src/ide_server/: commands.rs  mod.rs  process.rs  protocol.rs
rust-purescript-language-server/tests/: integration_test.rs  lsp_client.rs
rust-purescript-language-server/tests/fixtures/: broken.purs  valid.purs
vscode-purescript-rust-extension/: .eslintrc.json  .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  purescript-rust-language-server-0.1.0.vsix
vscode-purescript-rust-extension/src/: extension.ts
vscode-purescript-rust-extension/src/test/: runTest.ts
vscode-purescript-rust-extension/src/test/suite/: extension.test.ts
