[package]
name = "rust-purescript-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.94"
regex = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio-tungstenite = "0.20"
tungstenite = "0.20"

[dev-dependencies]
tempfile = "3.0"
